# Stack-Mo

./: README.md
Public/Folder/: README.md
Public/Folder/sum_check/: Cargo.toml
Public/Folder/sum_check/src/: prover.rs
Public/Folder/sum_check/src/interactive/: mod.rs
Public/New i/: Cargo.toml
Syncro/: BACKEND_DOCUMENTATION.md  INTEGRATIONS.md  LANDING_PAGE_PROMPT.md  README.md  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml
Syncro/app/: client.tsx  globals.css  layout.tsx  page.tsx  ready.tsx
Syncro/components/: command-palette.tsx  dashboard-client.tsx  notifications-panel.tsx  onboarding-tour.tsx  undo-history-panel.tsx
Syncro/context/: AgentContext.tsx
Syncro/contracts/: LayerZeroNotifier.sol  LayerZeroSender.sol  MockLayerZeroEndpoint.sol  SubscriptionScheduler.sol
Syncro/hooks/: use-modal-manager.ts  use-undo-history.ts  use-undo-manager.ts  useMakePaymentFn.tsx
Syncro/lib/: accessibility-utils.ts  (+16 more)
backend/: chainhook.json  index.ts  package-lock.json  package.json  types.ts
counter-dapp/: package.json
hello-world/: Clarinet.toml  package-lock.json  package.json
my-token/: Clarinet.toml  package.json
payment-dapp/: package-lock.json  package.json
secret-wisher/: Clarinet.toml  package-lock.json  package.json
secret-wisher-dapp/: package.json  vite.config.ts
stackpay/: Clarinet.toml  package.json
stackpay-app/: README.md  index.html  jest.config.ts  package-lock.json  package.json  vitest.config.ts
tic-tac-toe/: Clarinet.toml  package.json
timelock/: Clarinet.toml  package.json
univariate_poly/: Cargo.toml
(+157 files in other folders)
