[package]
name = "sum_check"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
univariate_poly = {path = "../univariate_poly"}
multivariate_poly = {path = "../multivariate_poly"}
sha3 = "0.10.8"
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main" }